[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["shinyoung99 <shinyoung5906@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
